nzbhydra/nzbhydra-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra
  namespace: media-services
spec:
  selector:
    app: nzbhydra
  ports:
    - name: nzbhydra
      port: 5076
      targetPort: 5076
